Added Guice dependency injection

--- a/ReCore/gradle.properties
+++ b/ReCore/gradle.properties
@@ -4,4 +4,4 @@ author=Mr_Little_Kitty
 description=A plugin that reeees the core
 website=www.arcation.net
 
-mainClass=net.arcation.recore.CellBlockPlugin
+mainClass=net.arcation.recore.core.main.ReCorePlugin
